[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
anyhow = "1"
mio = { version = "0.8", features = ["os-poll", "net"] }